<?xml version="1.0" encoding="utf-8" ?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ArtistsFragment">

    <data>
        <variable name="band" type="com.example.vinyls.models.Band"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bandImageView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="Imagen de Banda"
                android:scaleType="centerCrop"
                tools:src="@drawable/gradient_album_cover"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/bandTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center|bottom"
                android:text="@{band.name}"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@+id/bandImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/description"
                android:textColor="@color/secondary_text"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/bandImageView"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@{band.description}"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTitleTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>