<resources>
    <string name="app_name">Vinyls</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_albums">Albumes</string>
    <string name="songs_title">Canciones</string>
    <string name="artists_title">Artistas</string>
    <string name="desc_album_cover">Album cover</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preg_usuario_inicio">Que tipo de usuario eres?</string>
    <string name="inicio_button_visitante">Visitante</string>
    <string name="inicio_button_usuario">Usuario</string>
    <string name="agregar_cancion_album">Agregar canción</string>
    <string name="agregar_album">Agregar Album</string>
    <string name="agregar_collector">Agregar Coleccionista</string>
    <string name="agregar_artista">Agregar Artista</string>
    <string name="album_title">Album title</string>
    <string name="track_name_field">Nombre de la canción</string>
    <string name="text_save_button">Guardar</string>
    <string name="artista_prefix">Artista \u0020 · \u0020 </string>
    <string name="description">Descripción</string>


<!--    Agregar Album Strings-->
    <string name="nombre_album_agregar">Nombre del album</string>
    <string name="url_cover_album_agregar">URL de imagen de album</string>
    <string name="desc_album_agregar">Descripción del Album</string>
    <string name="fecha_album_agregar">Fecha del album</string>


    <string-array name="genres_array">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="labels_array">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>

</resources>